Initialize |bytes_so_far| local variable in SaveFileManager::SaveFinished.

As pointed out in https://crbug.com/594219#c29 the local variable
|bytes_so_far| is not initialized at the point of declaration.  This is
okay in the current code (this variable *does* get intialized in all the
possible code flows), but the lack of initialization violates the style
guide [1] and is an unnecessary refactoring risk.

[1] https://google.github.io/styleguide/cppguide.html#Local_Variables says:
      Place a function's variables in the narrowest scope possible, and
      initialize variables in the declaration.

BUG=594219

Review URL: https://codereview.chromium.org/1833723002

Cr-Commit-Position: refs/heads/master@{#383163}

Former-commit-id: 34f48dde1eb15cdf568cba166aaf7db7f71a679e